app/assets/stylesheets/vinyls.scss
// Place all the styles related to the vinyls controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

body { 
  font-family: "Franklin Gothic Medium","Franklin Gothic","ITC Franklin Gothic", Arial,sans-serif;
  background-image: url('seigaiha.png');
}

h2 {
  color: #555;
}

h5 {
  font-style: italic;
}

.hero-image {
  background-image: image-url('record-336626_1920.jpg');
  height: 42em;
  background-size: cover;
  background-position: center;
  width: 100%;
  position: relative;
}

